fix: visibility in dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -502,6 +502,10 @@
   color: #737373 !important;
 }
 
+.dark .text-slate-400 {
+  color: #555555 !important;
+}
+
 /* --- Border Colors --- */
 .dark .border-gray-200,
 .dark .border-clif-gray-200 {
